--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -12,11 +12,12 @@
       <div class="form-group">
         <button class="btn btn-outline-info" type="submit" name="signup">Sign Up</button>
       </div>
+    </form>
   </div>
 
   <div class="boder-top padding-3">
     <small class="text-muted">
-      Already Have an Account? <a href="#">Sign In Here.</a>
+      Already Have an Account? <a href="{% url 'login' %}">Log In Here.</a>
     </small>
 
   </div>
