--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -2,7 +2,15 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
-    <h1>{{ user.username }}</h1>
-
+  <div class="content-section">
+    <div class="media">
+      <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+      <div class="media-body">
+        <h1 class="account-heading">{{ user.username }}</h1>
+        <p class="text-secondary">{{ user.email }}</p>
+      </div>
+    </div>
+    <!-- FORM HERE -->
+  </div>
 
 {% endblock %}
