--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -6,15 +6,31 @@
     <div class="media">
       <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
       <div class="media-body">
-        <h1 class="account-heading">{{ user.username }}</h1>
-        <p class="text-secondary">{{ user.email }}</p>
+
+        {% if user.profile.header %}
+          <h1 class="account-heading">{{ user.profile.header }}</h1>
+          <h4> - {{ user.username }}</h4>
+        {% else %}
+          <h1 class="account-heading">{{ user.username }}</h1>
+        {% endif %}
+          <p class="text-secondary">{{ user.email }}</p>
+
       </div>
     </div>
-    <div class="boder-top padding-3">
-      <small class="text-muted">
-        <a href="{% url 'users-update' %}">Update Account</a>
-      </small>
 
+    <div class="media">
+      <div class="media-body">
+        <legend class="border-bottom mb-4"> About Me</legend>
+
+
+        <p class="text-secondary">{{ user.profile.about_me }}</p>
+
+      </div>
+    </div>
+
+
+    <div class="boder-top padding-3">
+      <a class="btn btn-outline-info" href="{% url 'users-update' %}">Update</a>
     </div>
   </div>
 
